--- a/views/index.erb
+++ b/views/index.erb
@@ -18,10 +18,13 @@
 	
 </head>
 <body>
-  <div class="row">
-    <div class="col-lg-1 col-centered">
-    		<canvas></canvas>
-    </div>
+	<div class="container">
+	  <div class="row">
+	    <div class="col-lg-12 col-centered">
+	    		<div class="viewer"><canvas></canvas></div>
+	    		
+	    </div>
+		</div>
 	</div>
 	
 
