Added layout to input time

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,14 +15,36 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" type="text/css" href="/css/jquery.timepicker.css">
+	<script src="/js/jquery.timepicker.js"></script>
 	
 </head>
 <body>
-	<div class="container">
+	<div class="">
 	  <div class="row">
-	    <div class="col-lg-12 col-centered">
+	    <div class="col-lg-9 col-centered">
 	    		<div class="viewer"><canvas></canvas></div>
 	    		
+	    </div>
+	    <div class="col-lg-3">
+	    	<div class="col-lg-12 panel panel-primary"> 
+	    		<div class="panel-heading"> 
+	    			<h3 class="panel-title">Set Initial Time</h3> 
+	    		</div> 
+	    		<div class="panel-body"> 
+	    		<input type="" class="timepicker" name="">
+		    		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+						  <div class="btn-group" role="group">
+						    <button type="button" class="btn btn-default">Start</button>
+						  </div>
+						  <div class="btn-group" role="group">
+						    <button type="button" class="btn btn-default">Stop</button>
+						  </div>
+						</div>
+					</div> 
+	    	</div>
+	    	
 	    </div>
 		</div>
 	</div>
