--- a/views/index.erb
+++ b/views/index.erb
@@ -36,10 +36,10 @@
 	    		<input type="" class="timepicker" name="">
 		    		<div class="btn-group btn-group-justified" role="group" aria-label="...">
 						  <div class="btn-group" role="group">
-						    <button type="button" class="btn btn-default">Start</button>
+						    <button type="button" id="btnStart" class="btn btn-default">Start</button>
 						  </div>
 						  <div class="btn-group" role="group">
-						    <button type="button" class="btn btn-default">Stop</button>
+						    <button type="button" id="btnStop" class="btn btn-default">Stop</button>
 						  </div>
 						</div>
 					</div> 
