--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,13 @@
 
 	<link rel="stylesheet" type="text/css" href="/css/jquery.timepicker.css">
 	<script src="/js/jquery.timepicker.js"></script>
-	
+	<script src="/js/jquery.logviewer.js"></script>
+	<script type="text/javascript">
+
+		jQuery(document).bind("ready", function() {
+		     $('#output').logViewer({logUrl: '/output'});
+		});
+		</script>
 </head>
 <body>
 	<div class="">
@@ -43,6 +49,12 @@
 						  </div>
 						</div>
 					</div> 
+	    	</div>
+
+	    	
+	    			<section id="col-lg-11" >
+		          <textarea id="output" autocomplete="off"></textarea>
+		        </section>
 	    	</div>
 	    	
 	    </div>
